--- a/Section 6/v1-springboot/accounts/src/main/resources/application.yml
+++ b/Section 6/v1-springboot/accounts/src/main/resources/application.yml
@@ -14,5 +14,15 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
 build:
   version: "1.0"
+
+accounts:
+  message: "Welcome to EazyBank accounts related local APIs "
+  contactDetails:
+    name: "John Doe - Developer"
+    email: "vivek@hotmail.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
