--- a/Section_6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/Section_6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -2,13 +2,21 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+    # active: native
+    active: git
   cloud:
     config:
       server:
-        native:
-          search-locations:
-          #- "classpath:/config"
-          - "file:///D://Learnings//Spring_Boot_Microservices'//Udemy//EazyBytes//Section 6"
+        # native:
+          # search-locations: "classpath:/config"
+          # search-locations: "file:///Users//eazybytes//Documents//config"
+        git:
+          uri: "https://github.com/vivek-gohil/EazyBytes-Config.git"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
+encrypt:
+  key: "45D81EC1EF61DF9AD8D3E5BB397F9"
 server:
   port: 8071
