--- a/Section_6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/Section_6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -16,6 +16,16 @@ spring:
           timeout: 5
           clone-on-start: true
           force-pull: true
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 encrypt:
   key: "45D81EC1EF61DF9AD8D3E5BB397F9"
 server:
