--- a/Section_7/accounts/pom.xml
+++ b/Section_7/accounts/pom.xml
@@ -57,8 +57,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -79,10 +79,6 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -105,7 +101,7 @@
 				<version>3.4.1</version>
 				<configuration>
 					<to>
-						<image>borntocode/${project.artifactId}:s6</image>
+						<image>borntocode/${project.artifactId}:s7</image>
 					</to>
 				</configuration>
 			</plugin>
