--- a/Section_7/cards/pom.xml
+++ b/Section_7/cards/pom.xml
@@ -42,10 +42,6 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -53,10 +49,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -102,7 +97,7 @@
 				<version>3.4.1</version>
 				<configuration>
 					<to>
-						<image>borntocode/${project.artifactId}:s6</image>
+						<image>borntocode/${project.artifactId}:s7</image>
 					</to>
 				</configuration>
 			</plugin>
