--- a/Section 8/configserver/src/main/resources/application.yml
+++ b/Section 8/configserver/src/main/resources/application.yml
@@ -16,20 +16,16 @@ spring:
           timeout: 5
           clone-on-start: true
           force-pull: true
-  rabbitmq:
-    host: "localhost"
-    port: 5672
-    username: "guest"
-    password: "guest"
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
   health:
-    readiness-state:
+    readinessState:
       enabled: true
-    liveness-state:
+    livenessState:
       enabled: true
   endpoint:
     health:
