Eureka Client Configuration

--- a/Section 8/accounts/src/main/resources/application.yml
+++ b/Section 8/accounts/src/main/resources/application.yml
@@ -21,8 +21,30 @@ spring:
     show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
+
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "accounts"
+    description: "Eazy Bank Accounts Microservice"
+    version: "1.0.0"
